<package>
  <name>mission_srvs</name>
  <version>0.1.0</version>
  <description>Mission Services</description>

  <maintainer email="xisco.bonnin@uib.es">Francisco Bonnin-Pascual</maintainer>
  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>  

  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/mission_srvs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
